Fixed titleBox overflowing on mobile

--- a/assets/scss/design/articleDesign.scss
+++ b/assets/scss/design/articleDesign.scss
@@ -11,6 +11,33 @@
 	margin: 0 0 1em;
 }
 
+.titleBox {
+	text-shadow: var(--dark-background-colour-alt) 0px 0px 10px;
+	color: var(--dark-text-colour);
+	// Unify themes
+	img.invertable {
+		filter: invert(var(--dark-inverted-percent));
+	}
+	a, {
+		color: var(--dark-link-colour);
+		&:hover {
+			color: var(--dark-link-colour-hover);
+		}
+		&:active {
+			color: var(--dark-link-colour-active);
+		}
+		&:visited {
+			color: var(--dark-link-colour-visited);
+			&:hover {
+				color: var(--dark-link-colour-visited-hover);
+			}
+			&:active {
+				color: var(--dark-link-colour-visited-active);
+			}
+		}
+	}
+}
+
 article li:not(:last-child) {
 	margin-bottom: 0.5em;
 }
