--- a/assets/scss/vars.scss
+++ b/assets/scss/vars.scss
@@ -10,7 +10,6 @@
 	/// Main
 	--main-columns: 1fr 4fr 1fr;
 	--aside-display: block;
-	--tb-aspect-ratio: 2.75 / 1;
 
 	// Design
 	--article-title-size: 3.5em;
@@ -19,7 +18,6 @@
 // Small width
 @media screen and (max-width: 70rem){
 	:root {
-		--tb-aspect-ratio: 2.35 / 1;
 		--main-columns: 1fr 5fr 0;
 	}
 }
